--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 src/dogs-vs-cats/* filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+.DS_Store filter=lfs diff=lfs merge=lfs -text
